# polyphony

./: .env.example  .gitignore  LICENSE  METHODOLOGY.md  README.md  pyproject.toml
.claude/: settings.local.json
docs/superpowers/specs/: 2026-03-23-image-fetcher-and-data-generator-design.md
polyphony/: __init__.py  generators.py  onboarding.py  prompts.py  utils.py
polyphony/agents/: __init__.py  _image_utils.py  anthropic_agent.py  base.py  human.py  ollama_agent.py  openai_agent.py
polyphony/cli/: __init__.py  cmd_analyze.py  cmd_calibrate.py  cmd_code.py  cmd_codebook.py  cmd_data.py  cmd_discuss.py  cmd_export.py  cmd_irr.py  cmd_memo.py  cmd_practice.py  cmd_project.py  cmd_setup.py  main.py
polyphony/db/: __init__.py  connection.py
polyphony/db/migrations/: 001_initial.sql  002_image_support.sql  003_human_coder.sql  004_prompt_hash.sql  005_podcast_support.sql  006_add_indexes.sql  007_human_authority.sql
polyphony/io/: __init__.py  exporters.py  fetchers.py  importers.py  net_safety.py  podcast.py  rss.py  transcribers.py
polyphony/models/: __init__.py  agent.py  codebook.py  coder_card.py  coding.py  document.py  flag.py  irr.py  llm.py  memo.py  project.py
polyphony/pipeline/: __init__.py  analysis.py  calibration.py  coding.py  discussion.py  induction.py  irr.py
polyphony/prompt_templates/: batch_coding.yaml  batch_deductive_coding.yaml  codebook_induction.yaml  codebook_referee.yaml  deductive_coding.yaml  discussion.yaml  memo_synthesis.yaml  open_coding.yaml
polyphony_gui/: __init__.py  __main__.py  _launcher.py  app.py  components.py  db.py  models.py  run.sh  services.py
polyphony_gui/.streamlit/: config.toml
polyphony_gui/pages/: 0_Settings.py  1_Projects.py  2_Import_Data.py  3_Codebook.py  4_Calibrate.py  5_Code.py  6_IRR_Dashboard.py  7_Discuss.py  8_Analysis.py  9_Export.py
prompts/: memo_synthesis.yaml  open_coding.yaml
tests/: conftest.py  test_agents.py  test_analysis.py  test_batch_coding.py  test_calibration_pipeline.py  test_cli.py  test_codebook.py  test_coding_pipeline.py  test_db.py  test_exporters.py  test_fetchers.py  test_fixtures_integration.py  test_generators.py  test_gui_components.py  test_gui_models.py  test_gui_services.py  test_importers.py  test_irr.py  test_onboarding.py  test_podcast.py  test_rss.py  test_transcribers.py
tests/fixtures/: README.md  sample_assignments.csv  sample_codebook.yaml  sample_data.json  sample_documents.csv  sample_documents_extended.json  sample_llm_calls.jsonl
